# yahboom2wd_ws

./: .gitignore  BUILD_FIX_NOTES.md  README.md
bags/: plot_yahboom_bag.py
bags/robot1_feedback_arc_left_20260705_014051/: metadata.yaml  robot1_feedback_arc_left_20260705_014051_0.mcap
bags/robot1_feedback_arc_left_20260705_014051/plots/: summary.txt
bags/robot1_feedback_arc_left_20260705_015308/: metadata.yaml  robot1_feedback_arc_left_20260705_015308_0.mcap
bags/robot1_feedback_arc_left_20260705_020916/: metadata.yaml
bags/robot1_feedback_arc_left_20260705_021150/: metadata.yaml  robot1_feedback_arc_left_20260705_021150_0.mcap
bags/robot1_feedback_arc_left_20260705_022150/: metadata.yaml  robot1_feedback_arc_left_20260705_022150_0.mcap
bags/robot1_feedback_arc_left_20260705_022150/plots/: summary.txt
bags/robot1_feedback_circle_left_20260705_023603/: metadata.yaml
bags/robot1_feedback_circle_left_20260705_023603/plots/: summary.txt
bags/robot1_feedback_circle_right_20260705_025310/: metadata.yaml
bags/robot1_feedback_circle_right_20260705_025310/plots/: summary.txt
bags/robot1_feedback_rotation_90_left_20260704_174321/: metadata.yaml
bags/robot1_feedback_rotation_90_left_20260704_174321/plots/: summary.txt
bags/robot1_feedback_sinusoidal_20260706_092846/: metadata.yaml  robot1_feedback_sinusoidal_20260706_092846_0.mcap
bags/robot1_feedback_sinusoidal_20260706_092846/plots/: summary.txt
bags/robot1_feedback_stopgo_20260705_031720/: metadata.yaml  robot1_feedback_stopgo_20260705_031720_0.mcap
bags/robot1_feedback_stopgo_20260705_031720/plots/: summary.txt
bags/robot1_feedback_stopgo_20260705_033720/: metadata.yaml  robot1_feedback_stopgo_20260705_033720_0.mcap
bags/robot1_feedback_stopgo_20260705_033720/plots/: summary.txt
bags/robot1_feedback_straight_20260703_175727/: metadata.yaml  robot1_feedback_straight_20260703_175727_0.mcap
bags/robot1_feedback_straight_20260704_171450/: metadata.yaml  robot1_feedback_straight_20260704_171450_0.mcap
bags/robot1_feedback_straight_20260704_171450/plots/: summary.txt
bags/robot1_forward_0p1_10s_20260703_175515/: metadata.yaml  robot1_forward_0p1_10s_20260703_175515_0.mcap
bags/robot1_forward_0p1_10s_20260703_175515/plots/: summary.txt
bags/two_robot_dmpc_motion_20260710_153231/: metadata.yaml  two_robot_dmpc_analysis.csv  two_robot_dmpc_analysis.txt
bags/two_robot_dmpc_motion_20260710_153231/plots_robot1/: summary.txt
bags/two_robot_dmpc_motion_20260712_032738/: two_robot_dmpc_analysis.csv  two_robot_dmpc_analysis.txt  two_robot_dmpc_analysis_obstacle_metrics.csv
bags/two_robot_dmpc_sim_20260710_133906/: metadata.yaml  two_robot_dmpc_analysis.csv  two_robot_dmpc_analysis.txt
bags/two_robot_obstacle_hw_motion_120s_20260712_155843/: two_robot_dmpc_analysis.csv  two_robot_dmpc_analysis.txt  two_robot_dmpc_analysis_obstacle_metrics.csv
bags/two_robot_obstacle_hw_motion_180s_20260712_164222/: metadata.yaml  two_robot_dmpc_analysis.csv  two_robot_dmpc_analysis.txt  two_robot_dmpc_analysis_obstacle_metrics.csv
src/yahboom_2wd_bringup/: CMakeLists.txt  package.xml
src/yahboom_2wd_bringup/config/: four_robot_namespaces.yaml  yahboom_2wd.yaml
src/yahboom_2wd_bringup/launch/: yahboom_2wd.launch.py
src/yahboom_2wd_bringup/scripts/: install_udev_yahboom.sh
src/yahboom_2wd_description/: CMakeLists.txt  package.xml
src/yahboom_2wd_description/urdf/: yahboom_2wd.urdf.xacro
src/yahboom_2wd_dmpc/: README_MPC_INTERFACE.md  package.xml  setup.cfg  setup.py
src/yahboom_2wd_dmpc/config/: two_robot_dmpc.yaml
src/yahboom_2wd_dmpc/launch/: robot_dmpc_controller.launch.py  two_robot_dmpc_coordinator.launch.py
src/yahboom_2wd_dmpc/yahboom_2wd_dmpc/: __init__.py  config_utils.py  consensus_comm.py  consensus_config.py  consensus_controller.py  controller_node.py  coordinator_node.py  dmpc_controller_node.py  dmpc_coordinator_ros_node.py  explicit_hybrid_controller.py
src/yahboom_2wd_dmpc_sim/: README_SIM.md  package.xml  setup.cfg  setup.py
src/yahboom_2wd_dmpc_sim/config/: two_robot_dmpc_sim.yaml
src/yahboom_2wd_dmpc_sim/launch/: two_robot_dmpc_sim.launch.py
src/yahboom_2wd_dmpc_sim/yahboom_2wd_dmpc_sim/: analyze_two_robot_bag.py  two_robot_sim_node.py
src/yahboom_2wd_driver/: package.xml  setup.cfg  setup.py
src/yahboom_2wd_driver/yahboom_2wd_driver/: __init__.py  motor_test.py  serial_probe.py  yahboom_2wd_node.py
src/yahboom_2wd_tests/: README.md  package.xml  setup.cfg  setup.py
src/yahboom_2wd_tests/config/: path_tests.yaml
src/yahboom_2wd_tests/launch/: path_follower.launch.py
src/yahboom_2wd_tests/yahboom_2wd_tests/: path_follower_node.py
tools/: plot_yahboom_team_animation.py  plot_yahboom_team_bag.py
(+10 files in other folders)
