<?xml version="1.0"?>
<package format="3">
  <name>yahboom_2wd_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch and configuration for the custom Yahboom 2WD differential robot.</description>
  <maintainer email="navid@example.com">Navid Noroozi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>yahboom_2wd_driver</exec_depend>
  <exec_depend>yahboom_2wd_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
