<?xml version="1.0"?>
<package format="3">
  <name>yahboom_2wd_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro description for the custom Yahboom 2WD differential robot prototype.</description>
  <maintainer email="navid@example.com">Navid Noroozi</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
