<?xml version="1.0"?>
<package format="3">
  <name>yahboom_2wd_dmpc</name>
  <version>0.1.0</version>
  <description>ROS 2 / ZeroMQ interface for two Yahboom 2WD distributed MPC experiments.</description>
  <maintainer email="navid@example.com">Navid Noroozi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-zmq</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
