<?xml version="1.0"?>
<package format="3">
  <name>yahboom_2wd_dmpc_sim</name>
  <version>0.1.0</version>
  <description>Lightweight ROS 2 simulation counterpart for the Yahboom 2WD two-robot DMPC hardware interface.</description>
  <maintainer email="navid@example.com">Navid Noroozi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>yahboom_2wd_dmpc</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
