<?xml version="1.0"?>
<package format="3">
  <name>yahboom_2wd_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 Python interface for a custom Yahboom 2WD differential robot using ROS Robot Control Board V3.0 and Rosmaster_Lib.</description>
  <maintainer email="navid@example.com">Navid Noroozi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
