<?xml version="1.0"?>
<package format="3">
  <name>yahboom_2wd_tests</name>
  <version>0.1.0</version>
  <description>Odometry-feedback path-following test scenarios for the Yahboom 2WD ROS 2 interface.</description>
  <maintainer email="pi@example.com">pi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
